@@ -1,3 +1,6 @@
+{DEV}
+# Fixed: RTL support for minified css files.
+
 v1.0.5.3
 # New: Typography option for Archive Summary Box.
 # Enhancement: Updated default heading font-size support for small devices.
